<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Símarómur</string>
    <string name="eng_sample">This is a sample English sentence for Símarómur synthesizer.</string>
    <string name="icelandic_sample">Þetta er prófunarsetning á íslensku fyrir talgervilinn Símarómur.</string>
    <string name="simaromur_manager">Símarómur</string>
    <string name="simaromur_voice_manager">Voices</string>
    <string name="simaromur_norm_dictionary">Dictionary</string>
    <string name="simaromur_info">About</string>
    <string name="simaromur_feedback">Feedback</string>
    <string name="email_subject">Feedback on Símarómur</string>
    <string name="email_message">Feedback: </string>
    <string name="send_message">Send mail …</string>
    <string name="tts_settings_label">TTS Settings</string>
    <string name="voice_list_update">Download Voice List</string>
    <string name="speak_button">Play</string>
    <string name="speak_progress">playing</string>
    <string name="voice_test_text_network">Þetta er netrödd. Texti til lestrar er sendur á netþjón, sem sendir upplesturinn til baka á snjallsímann. Netraddirnar eru enn sem komið er hraðvirkari en raddirnar á símanum sjálfum.</string>
    <string name="voice_test_text_on_device">Símarómur les íslenskan texta á snjallsímanum þínum. Raddirnar eru myndaðar á símanum og því er engin nettenging nauðsynleg. Jafnframt sendir Símarómur engan texta frá símanum og því er óhætt að nota Símaróm fyrir allan lestur.</string>
    <string name="voice_test_text_on_device_fast">Símarómur les íslenskan texta á snjallsímanum þínum. Raddirnar eru myndaðar á símanum og því er engin nettenging nauðsynleg. Jafnframt sendir Símarómur engan texta frá símanum og því er óhætt að nota Símaróm fyrir allan lestur.</string>
    <string name="voice_name_title">Name</string>
    <string name="voice_gender_title">Gender</string>
    <string name="voice_availability_title">Status</string>
    <string name="voice_type">Type</string>
    <string name="speak_voice_title">Play</string>
    <string name="play_voice_title_description">Speak the shown text</string>
    <string name="play_term_title_description">Speak the shown text</string>
    <string name="play_replacement_title_description">Speak the shown text</string>
    <string name="info_other">Other</string>
    <string name="wiki_github">Instructions</string>
    <string name="info_about_device_title">Device Information</string>
    <string name="info_copyright_url">https://github.com/grammatek/simaromur/blob/master/LICENSE-APACHE2</string>
    <string name="open_in_new">Open in new</string>
    <string name="voice_lang_title">Language</string>
    <string name="is_IS">Icelandic</string>
    <string name="en_EN">English</string>
    <string name="en_US">U.S. English</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_norm_entry">Delete</string>
    <string name="not_yet">No thanks</string>
    <string name="doit">Do it!</string>
    <string name="tts_settings">Before you can use Símarómur as a screen reader, you have to activate it in the Android TTS settings</string>
    <string name="important">Important</string>
    <string name="info_copyright">Copyright</string>
    <string name="info_url">URL</string>
    <string name="info_privacy_notice">Privacy notice</string>
    <string name="info_privacy_notice_url">https://www.grammatek.com/legal#simaromur</string>
    <string name="info_runtime_header">RUNTIME_HEADER</string>
    <string name="info_runtime">Runtime information</string>
    <string name="info_android_version">Android Version</string>
    <string name="info_app_version">Version</string>
    <string name="info_version_error">Error retrieving version info</string>
    <string name="info_supported_abis">Supported ABIs</string>
    <string name="info_phone_model">Phone Model</string>
    <string name="info_about">© (2021–2024) Grammatek ehf.\nhttps://www.grammatek.com</string>
    <string name="info_repo_url">https://github.com/grammatek/simaromur/wiki</string>
    <string name="info_benchmark">Benchmark</string>
    <string name="info_benchmark_value">times faster than real time</string>
    <string name="privacy_notice">Símarómur sends text to a 3rd party speech service to convert it to spoken language. Neither the text, nor the audio data or your IP address are stored on the mobile phone or on these servers.\n\nPlease visit our privacy policy at https://www.grammatek.com/legal#simaromur</string>
    <string name="crashlytics_title">Improve Símarómur</string>
    <string name="crashlytics_notice">To improve Símarómur, you can enable anonymous usage statistics and crash reports to be gathered via a third party: Google Firebase. If you consent, your IP Address is stored only for this purpose.\n\nYou can revoke your consent anytime, by deselecting your consent in the Info screen\n\n\nPlease visit our privacy policy at https://www.grammatek.com/legal#simaromur</string>
    <string name="speech_service_connection_problem">Símarómur connection problem</string>
    <string name="speech_service_not_available">Speech synthesis services are not available at this time</string>
    <string name="try_again_later">Please try again later</string>
    <string name="check_internet">Please check internet connection</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="icon_description">Please press an icon</string>
    <string name="type_local">Device Voice</string>
    <string name="type_local_downloaded">Download</string>
    <string name="type_network">Network Voice</string>
    <string name="do_download">Download</string>
    <string name="enter_text">Enter text here</string>
    <string name="cache">Cache</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="cache_size_mb">%1$d MB</string>
    <string name="cache_progress_percent">%1$d%%</string>
    <string name="megabyte"> MB</string>
    <string name="percentage">%</string>
    <string name="downloading_voice">Downloading voice…</string>
    <string name="downloading_progress">0%</string>
    <string name="unzipping_voice">Setting up voice…</string>
    <string name="sth_failed_try_again">Something went wrong, please try again.</string>
    <string name="more">More</string>
    <string name="uninstall">Uninstall voice</string>
    <string name="voice_more_title">Choose</string>
    <string name="voice_is_newest">Latest version already installed</string>
    <string name="voice_deletion_title">Delete voice</string>
    <string name="voice_deletion_q">Really delete voice?</string>
    <string name="voice_deletion_not_possible">You cannot delete the voice you are currently using, please select a different voice and try again</string>
    <string name="no_email_client">There is no email client installed</string>
    <string name="term_title">Term</string>
    <string name="replacement_title">Replacement</string>
    <string name="save_entry">Save</string>
    <string name="add_dict_entry">Add entry</string>
    <string name="dict_entry_deletion_title">Delete entry</string>
    <string name="dict_entry_deletion_q">Really delete entry?</string>
</resources>
