<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/downloading_voice"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="260dp"
        android:minHeight="50dp"
        android:max="100"
        android:progress="50"
        android:progressBackgroundTint="@color/white"
        style="?android:attr/progressBarStyleHorizontal" />

    <TextView
        android:id="@+id/pbPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/downloading_progress"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/cancel_download_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"/>

</LinearLayout>