<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/cache"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/cache_size_mb"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/trash_bin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/open_in_new"
            android:src="@drawable/ic_baseline_delete_forever_24" />

        <ProgressBar
            android:id="@+id/cache_storage_bar"
            style="@style/progress_bar_as_storage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:max="100"
            android:progress="50"
            android:progressBackgroundTint="@color/colorPrimaryLight"
            android:progressTint="@android:color/holo_green_light"></ProgressBar>

        <TextView
            android:id="@+id/progress_bar_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117.5dp"
            android:layout_marginTop="32dp"
            android:text="@string/cache_progress_percent"
            android:textColor="@color/white" />


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
